syntax = "proto3";

package user;

service UserService {
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc FindUserProfile(FindUserRequest) returns (FindUserResponse) {}
}

// Update User

message UpdateUserRequest {
  string email = 1;
  string profileImage = 2;
  string address = 3;
}

message UpdateUserResponse {
  int32 status = 1;
  repeated string error = 2;
}

// Find User

message FindUserData {
  string email = 1;
  string profileImage = 2;
  string address = 3;
}

message FindUserRequest { string email = 1; }

message FindUserResponse {
  int32 status = 1;
  repeated string error = 2;
  FindUserData data = 3;
}